# graphtool

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
include/graphtool/: driver.h  graph.h  lexer.h  parser.h  tok.h
src/: CMakeLists.txt  main.cpp
src/graphtool/: CMakeLists.txt  graph.cpp  lexer.cpp  parser.cpp  stream.cpp  tok.cpp
test/: cd.dot  crit.dot  cytron.dot  test.dot  test2.dot  test3.dot  unreachable.dot
